fix: estabilizando modelos llm no docker